add link to final report

--- a/rating_prediction.ipynb
+++ b/rating_prediction.ipynb
@@ -2,8 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Final report for challenge:\n",
+    "# https://docs.google.com/document/d/1zvWnFWvYVeoPrWs97bt5d9E2DJiMhW87jhdRkRYvi_E/edit#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
